--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,7 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
-dependencies = [
-    "polars>=1.8.2",
-]
+dependencies = ["polars>=1.8.2"]
+
 [tool.maturin]
 features = ["pyo3/extension-module"]
