--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,48 @@ requires = ["maturin>=1.9,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "project"
+name = "rustpy-toolkit"
+version = "0.1.0"
+description = "High-performance Polars expressions for Brazilian document validation and text processing"
+readme = "README.md"
 requires-python = ">=3.8"
+license = { file = "LICENSE" }
+authors = [{ name = "Your Name", email = "your.email@example.com" }]
+keywords = [
+    "polars",
+    "rust",
+    "cpf",
+    "cnpj",
+    "validation",
+    "brazilian",
+    "documents",
+]
 classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Text Processing",
+    "Topic :: Utilities",
 ]
-dynamic = ["version"]
 dependencies = ["polars>=1.8.2"]
+
+[project.urls]
+Homepage = "https://github.com/yourusername/rustpy-toolkit"
+Repository = "https://github.com/yourusername/rustpy-toolkit"
+Documentation = "https://github.com/yourusername/rustpy-toolkit#readme"
+Issues = "https://github.com/yourusername/rustpy-toolkit/issues"
 
 [tool.maturin]
 features = ["pyo3/extension-module"]
+module-name = "rustpy_toolkit._internal"
+python-source = "python"
