--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -57,6 +57,7 @@ jobs:
         with:
           name: wheels-linux-${{ matrix.target }}
           path: dist
+          retention-days: 30
 
   # Windows builds - focus on x64 (most common)
   windows:
@@ -81,6 +82,7 @@ jobs:
         with:
           name: wheels-windows-${{ matrix.target }}
           path: dist
+          retention-days: 30
 
   # macOS builds - both Intel and Apple Silicon
   macos:
@@ -108,6 +110,7 @@ jobs:
         with:
           name: wheels-macos-${{ matrix.platform.target }}
           path: dist
+          retention-days: 30
 
   # Source distribution
   sdist:
@@ -124,12 +127,13 @@ jobs:
         with:
           name: wheels-sdist
           path: dist
+          retention-days: 30
 
-  # Release job - only runs on tags or manual dispatch
+  # Release job - only runs on tags, downloads pre-built wheels
   release:
     name: Release
     runs-on: ubuntu-latest
-    if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
     needs: [test, linux, windows, macos, sdist]
     permissions:
       # Use to sign the release artifacts
@@ -139,7 +143,8 @@ jobs:
       # Used to generate artifact attestation
       attestations: write
     steps:
-      - uses: actions/download-artifact@v4
+      - name: Download all wheels
+        uses: actions/download-artifact@v4
         with:
           pattern: wheels-*
           path: wheels
@@ -149,7 +154,6 @@ jobs:
         with:
           subject-path: "wheels/*"
       - name: Publish to PyPI
-        if: ${{ startsWith(github.ref, 'refs/tags/') }}
         uses: PyO3/maturin-action@v1
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
